--- a/ishop-admin/lenovo/ishop.less
+++ b/ishop-admin/lenovo/ishop.less
@@ -71,6 +71,15 @@
                         width: 300px;
                     }
                 }
+
+                .error {
+                    display: inline-block;
+                    width: 100%;
+                    margin-left: 85px;
+                    margin-top: 3px;
+                    font-size: 14px;
+                    color: red;
+                }
             }
 
             .button-section {
