--- a/mobile/components/company.less
+++ b/mobile/components/company.less
@@ -14,8 +14,19 @@
         margin-bottom: 10px;
 
         select {
-            margin-left: 387px;
+            margin-left: 377px;
         }
+    }
+
+    .viewmodel-list {
+        display: table;
+        table-layout: fixed;
+    
+        .cell {
+            display: table-cell;
+            width: 50%;
+            vertical-align: top;
+        }    
     }
 
     &-name {
